[package]
name = "fundraiser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
pinocchio-token = { git = "https://github.com/L0STE/pinocchio/", branch = "spl-token" }
five8_const = "0.1.3"
solana-nostd-sha256 = "0.1.3"

[dev-dependencies]
mollusk-svm = "0.0.6"
solana-sdk = "2.0.10"