[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["native"]
native = ["solana-program"]

[dependencies]
solana-program = { version = "2.0.10", optional = true }

[dev-dependencies]
mollusk-svm = { git = "https://github.com/buffalojoec/mollusk.git" }
solana-sdk = "2.0.10"
